@@ -38,7 +38,6 @@ SPEC_FILES = \
 	libfdata.spec.in
 
 EXTRA_DIST = \
-	README.macosx \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
